external-crates/move/crates/move-compiler/tests/move_2024/matching/multi_or_not_exhaustive.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/matching/multi_or_not_exhaustive.move:12:16
   │
12 │         match (subject) {
   │                ^^^^^^^ Pattern 'ABC::B(_1, _0)' not covered
   │
   = When '_1' is not 5
   = When '_0' is not 5
